--- a/css/style.css
+++ b/css/style.css
@@ -38,17 +38,19 @@ body {
 h1 {
     font-family: 'Solid', sans-serif;
     font-size: 50px;
-    color: #ffc400;
+    color: rgb(255, 196, 0);
 }
 
 p {
     font-family: 'XY', sans-serif;
-    font-size: medium;
+    font-size: 12px;
     color: #fff;
 }
 
-header p {
+header p,
+footer p {
     color: #515151;
+    font-size: 14px;
 }
 
 .site-container {
@@ -56,7 +58,7 @@ header p {
     position: relative;
     width: 1400px;
     margin: auto;
-    grid-template-rows: 1fr 5fr 0.3fr;
+    grid-template-rows: 1fr 4fr 0.3fr;
     grid-template-columns: repeat(2, 1fr);
     gap: 0;
 }
@@ -71,43 +73,198 @@ main {
     margin-left: 100px;
     grid-area: 2 / 1 / 3 / 2;
     display: grid;
-    grid-template-rows: 2fr 6fr 1fr;
+    grid-template-rows: 140px 450px 20px 1fr;
     grid-template-columns: 1fr;
     gap: 0;
-    background-color: rgb(206, 21, 21);
+    background-color: rgb(206, 21, 55);
+    border-radius: 50px 50px 0 50px;
     border: solid 2px #0f0f0f;
 }
 
-#top {}
-
-.bulb {
-    border-radius: 30%;
+#top {
+    grid-area: 1 / 1 / 1 / 1;
+    display: grid;
+    grid-template: 110px / 110px auto;
+    border-bottom: solid 1px #0f0f0f;
 }
 
-#pokescreen {}
+.bulb {
+    border-radius: 50px;
+}
 
-#left-buttons {}
+.big {
+    width: 80px;
+    height: 80px;
+    margin: 20px;
+    border: solid 8px white;
+}
 
+.bulb-container {
+    display: grid;
+    margin: 25px 0 0 25px;
+    grid-template: auto / repeat(3, 40px) auto;
+    gap: 12px;
+}
+
+.tiny {
+    width: 25px;
+    height: 25px;
+    border: solid 6px white;
+}
+
+.blue {
+    background: linear-gradient(to right bottom, #ffffff 0%, rgb(13, 187, 235) 100%);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+.green {
+    background: linear-gradient(to right bottom, #ffffff 0%, rgb(21, 206, 101) 100%);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+.red {
+    background: linear-gradient(to right bottom, #ffffff 0%, rgb(206, 21, 55) 100%);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+.yellow {
+    background: linear-gradient(to right bottom, #ffffff 0%, rgb(255, 196, 0) 100%);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+
+#pokescreen {
+    display: grid;
+    width: 450px;
+    margin: auto;
+    grid-template: auto 350px auto / auto 450px auto;
+}
+
+.gray-border {
+    grid-area: 2 / 2 / span 1 / span 1;
+    background: linear-gradient(to right bottom, #f1eaea 0%, rgb(187, 183, 184) 100%);
+    border-radius: 30px;
+    display: grid;
+    grid-template: 310px / 410px;
+    justify-content: center;
+    align-content: center;
+    border: solid 1px #0f0f0f;
+}
+
+#display {
+    grid-area: 1 / 1 / span 1 / span 1;
+    background-color: #f1f0e9;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: #0f0f0f;
+    
+}
+
+#display img {
+    display: block;
+    height: 200px;
+    margin: 10px auto;
+}
+
+#display p {
+    display: block;
+    margin: 10px 0;
+    color: #0f0f0f;
+}
+
+.display-divs {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    margin-top: auto;
+    padding: 0 auto;
+}
+
+.inline-div {
+    box-sizing: border-box;
+
+}
+
+#dis-reg,
+#dis-type {
+    width: calc(47% - 2px);
+    text-align: center;
+    padding: 4px;
+    border: 2px solid white; 
+    border-radius: 5px 5px 0 0;
+    padding: 9px 0 5px 0;
+}
+
+.display-divs2 {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0;
+}
+
+#dis-prev,
+#dis-next {
+    width: calc(50% - 2px);
+    width: 0;
+    height: 0;
+    border-style: solid;
+    position: relative;
+}
+
+#dis-prev {
+    border-width: 20px 30px 20px 0;
+    border-color: transparent #007bff transparent transparent;
+    transform: rotate(360deg);
+    margin-right: 10px;
+}
+
+#dis-next {
+    border-width: 20px 0 20px 30px;
+    border-color: transparent transparent transparent #007bff;
+    transform: rotate(0deg);
+    margin-left: 10px;
+}
+
+.display-divs3 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 0 auto;
+    margin-top: 30px;
+}
+
+.black{
+    display: block;
+    align-self: center;
+    width: 30%;
+    background-color: #0f0f0f7d;
+    height: 3px;
+    margin: 10px ;
+    border-radius: 10px;
+}
 
 aside {
     width: 600px;
-    margin-right: 100px;
+    margin: 140px 100px 0 0;
     grid-area: 2 / 2 / 3 / span 1;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 25% 25% 25% 25%;
     gap: 0;
-    background-color: rgb(206, 21, 21);
+    background-color: rgb(206, 21, 55);
     border: solid 2px #0f0f0f;
+    border-radius: 0 15px 50px 0;
 }
 
 footer {
     grid-area: 3/ 1 / span 1 / span 2;
     padding-bottom: 50px;
-}
-
-footer p {
-    color: #515151;
 }
 
 @media screen and (max-width: 799px) {}
