--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,8 @@ main {
     grid-template-rows: 140px 450px 20px 1fr;
     grid-template-columns: 1fr;
     gap: 0;
-    background-color: rgb(206, 21, 55);
+    background-color: ;
+    background: linear-gradient(to left top, rgb(149, 13, 38) 0%, rgb(206, 21, 55) 50%);
     border-radius: 50px 50px 0 50px;
     border: solid 2px #0f0f0f;
 }
@@ -255,11 +256,28 @@ aside {
     grid-area: 2 / 2 / 3 / span 1;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 25% 25% 25% 25%;
+    grid-template-rows: 15% 35% 25% 25%;
     gap: 0;
-    background-color: rgb(206, 21, 55);
+    background: linear-gradient(to right top, rgb(149, 13, 38) 0%, rgb(206, 21, 55) 50%);
     border: solid 2px #0f0f0f;
     border-radius: 0 15px 50px 0;
+}
+
+#infoscreen {
+    grid-area: 2 / 1 / span 1 / span 1;
+    width: 70%;
+    margin: auto;
+    background-color: #0f0f0f;
+    overflow: scroll;
+    padding: 10px 20px;
+    height: 100%;
+    text-align: justify;
+    border-radius: 15px;
+}
+
+.blue-text{
+    color:#007bff;
+    text-transform: uppercase;
 }
 
 footer {
@@ -267,4 +285,8 @@ footer {
     padding-bottom: 50px;
 }
 
+@media screen and (max-width: 1200px) {}
+
 @media screen and (max-width: 799px) {}
+
+@media screen and (max-width: 400px) {}
