--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,8 @@ main {
     width: calc(47% - 2px);
     text-align: center;
     padding: 4px;
-    border: 2px solid white; 
+    background-color: #0d8448;
+    color: white;
     border-radius: 5px 5px 0 0;
     padding: 9px 0 5px 0;
 }
